@@ -129,8 +129,8 @@ VERSION		= 86
 DDEVERSION = 13
 DDEDOTVERSION = 1.3
 
-REGVERSION = 12
-REGDOTVERSION = 1.2
+REGVERSION = 13
+REGDOTVERSION = 1.3
 
 BINROOT		= ..
 !IF "$(NODEBUG)" == "1"
@@ -461,7 +461,7 @@ install-libraries:
 	-@copy "$(ROOT)\library\dde\pkgIndex.tcl" "$(SCRIPT_INSTALL_DIR)\dde1.3"
 	@echo installing $(TCLREGDLLNAME)
 	-@$(MKDIR) "$(SCRIPT_INSTALL_DIR)\reg1.2"
-	-@copy "$(TCLREGDLL)" "$(SCRIPT_INSTALL_DIR)\reg1.2"
+	-@copy "$(TCLREGDLL)" "$(SCRIPT_INSTALL_DIR)\reg1.3"
 	-@copy "$(ROOT)\library\reg\pkgIndex.tcl" "$(SCRIPT_INSTALL_DIR)\reg1.2"
 	@echo installing encoding files
 	-@$(MKDIR) "$(SCRIPT_INSTALL_DIR)\encoding"
