@@ -193,7 +193,7 @@ VERSION         = $(TCL_MAJOR_VERSION)$(TCL_MINOR_VERSION)
 DDEDOTVERSION = 1.3
 DDEVERSION = $(DDEDOTVERSION:.=)
 
-REGDOTVERSION = 1.2
+REGDOTVERSION = 1.3
 REGVERSION = $(REGDOTVERSION:.=)
 
 BINROOT		= $(MAKEDIR)     # originally .
